# Thesis_bruteforce_match_check

./: .gitignore  README.md  bruteforce_find_matches.py  compare_bruteforce_vs_suffixarray.py  pyproject.toml
